# strumok

./: .gitignore  CMakeLists.txt  LICENSE  relationfile_strumok.txt  strumok.c  strumok.h  strumok512.py  strumok512_attack.py  strumok_benchmark.c  strumok_benchmark.h  strumok_selftest.c  strumok_selftest.h  strumok_tables.py  use-example.c
